# smart_fetch_orchestrator

./: .gitignore  CHANGELOG.md  pyproject.toml
scrapers/: README.md  requirements.txt  run_zillow.sh  seed_new_markets.py  zillow_for_sale.py  zillow_monitor.py
scripts/: audit_portal_urls.py  candidates_to_markdown.py  discover_portal_urls.py  portal_candidates_2026-04-22.json  portal_fetch_sweep.py  test_validator_fl.py  tier_smoke_test.py
smart_fetch/: __init__.py  config.py  extract_schemas.py  orchestrator.py  validator.py
smart_fetch/enrichers/: __init__.py  attom_enricher.py  batchdata_enricher.py  brightdata_enricher.py  housecanary_enricher.py
smart_fetch/fetchers/: __init__.py  arcgis_fetcher.py  brightdata_fetcher.py  browserbase_fetcher.py  cloudflare_fetcher.py  curl_cffi_fetcher.py  firecrawl_extract.py  firecrawl_fetcher.py  playwright_fetcher.py  requests_fetcher.py  socrata_fetcher.py
smart_fetch/utils/: api_cache.py
